<resources>
    <string name="app_name">多功能数据记录仪</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="phone_title">未检测到IC卡，请更换其他设备拨打 0537-2638599</string>
    <string name="device_power">仪器电量</string>
    <string name="current_version">当前版本</string>
    <string name="parameter_setting">参数设置</string>
    <string name="file_list">文件列表</string>
    <string name="no_data">暂无数据</string>
    <string name="version_check">版本检测</string>
    <string name="contact_comp">联系我们</string>
    <string name="exit_project">退出程序</string>
    <string name="parameter_read">参数读取</string>
    <string name="inspect_select">测量项目</string>
    <string name="operate_setting">操作设置</string>
    <string name="time_select">配置时间</string>
    <string name="dc_voltage">直流电压测量</string>
    <string name="ex_voltage">交流电压测量</string>
    <string name="dc_current">直流电流测量</string>
    <string name="ex_current">交流电流测量</string>
    <string name="on_off_measure">通断测量</string>

    <string name="start">开始采集</string>
    <string name="stop_gather">停止采集</string>
    <string name="stop_transfer">停止传输</string>
    <string name="refresh">刷新数据</string>
    <string name="main">主页</string>
    <string name="save">保存数据</string>
    <string name="delect_all">全部删除</string>

    <string name="gather_time">采集周期</string>
    <string name="off_time">通断时间OFF</string>
    <string name="off_gather_later_time">OFF采集延时</string>
    <string name="on_time">通断时间ON</string>
    <string name="on_later">通电延时时间</string>
    <string name="on_gather_later_time">ON采集延时</string>
    <string name="open_later_time">开机采集延时</string>

    <string name="start_date">开始检测时间</string>
    <string name="end_date">结束检测时间</string>
    <string name="only_back_date">单次背光时间</string>

    <string name="aline_time">时间校准</string>
    <string name="confirm_config">确认配置</string>

    <string name="last_version">已是最新版本</string>
    <string name="handler_data">数据请求中</string>
    <string name="version_data_error">版本信息请求失败</string>
    <string name="have_new_version">发现新版本</string>
    <string name="net_error">网络异常</string>
    <string name="no_devices">未获取到设备</string>
    <string name="version_checking">版本检测中...</string>
    <string name="device_data">设备数据</string>

    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>

    <string name="on_direct_current">通电直流电流</string>
    <string name="off_direct_current">断电直流电流</string>
    <string name="on_ac_current">通电交流电流</string>
    <string name="off_ac_current">断电交流电流</string>

    <string name="on_direct_voltage">通电直流电压</string>
    <string name="off_direct_voltage">断电直流电压</string>
    <string name="on_ac_voltage">通电交流电压</string>
    <string name="off_ac_voltage">断电交流电压</string>
    <string name="config_option">配置选项</string>


    <string name="device_detection">设备扫描中...</string>
    <string name="scan_fail">扫描失败</string>
    <string name="scan_finish">扫描结束</string>
    <string name="connect_success">已连接</string>
    <string name="connect_disconnected">连接断开</string>
    <string name="connect_services_failed">服务发现失败</string>
    <string name="connect_unknown_status">未知的连接状态</string>
    <string name="connect_timeout">连接超时</string>
    <string name="connect_gatt_error">GATT状态码异常</string>
    <string name="characteristic_notify_enable_failed">特征通知打开失败</string>
    <string name="characteristic_notify_enable_succeed">通知打开成功</string>
    <string name="characteristic_write_failed">特征数据写入失败</string>
    <string name="characteristic_write_success">特征数据写入成功</string>
    <string name="ble_activate_except">获取设备编码异常</string>
    <string name="ble_open_fail">蓝牙打开失败，请手动开启后重启程序</string>
    <string name="empower_success">授权成功</string>
    <string name="empower_faile">授权失败</string>
    <string name="ble_activate_code">请输入激活码</string>
    <string name="ble_activate_title">请复制上部设备码发送到鲁科管理员获取激活码，将激活码复制到下部输入框点击确定即可。</string>
    <string name="please_write_ture_activatecode">请输入正确激活码</string>
    <string name="dont_have_finish_date">请输入正确激活码</string>
    <string name="ble_activate_error">设备异常，请联系管理员</string>
    <string name="scan_again">未扫描到设备蓝牙，是否重新扫描</string>
    <string name="connect_again">蓝牙连接失败，是否重新连接</string>
    <string name="setting">参数配置中...</string>

    <string name="has_register">已注册</string>

    <string name="save_data">保存文件</string>
    <string name="project_file">设备文件</string>
    <string name="local_file">本地文件</string>

</resources>