<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingDefaultResource">

    <include layout="@layout/dialog_item_header" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tvDviceCode"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linelayout_backthemecolor_radion"
                android:gravity="left"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:textSize="14dp"
                android:enabled="true"
                android:textIsSelectable="true"
                android:focusable="true"
                android:longClickable="true"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="10dp"
                android:lineHeight="15dp"
                android:text="@string/ble_activate_title"/>
        <EditText
                android:id="@+id/etActivateCode"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linelayout_backthemecolor_radion"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:hint="@string/ble_activate_code"
                android:digits="0123456789abcdefABCDEF"
                android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

        <com.example.lkmdl.view.BaseButton
                android:id="@+id/btnCancel"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp" />

        <com.example.lkmdl.view.BaseButton
                android:id="@+id/btnSure"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/btn_sure"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp" />
    </LinearLayout>
</LinearLayout>