<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/theme_back_color"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_logo2"
                    tools:ignore="ContentDescription,RtlHardcoded" />

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tbLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/theme_back_color"
                    app:tabIndicatorColor="@color/red"
                    app:tabMinWidth="90dp"
                    app:tabSelectedTextColor="@color/red"
                    app:tabTextColor="@color/theme_color"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="46dp"
                android:layout_marginRight="2dp"
                android:orientation="horizontal">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/mainLineChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/ivMainTiem"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:src="@drawable/ic_select_time" />

                    <ImageView
                            android:id="@+id/ivMainTiemClose"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:src="@drawable/ic_select_time_close"
                            android:visibility="gone" />

                    <androidx.cardview.widget.CardView
                            android:id="@+id/cdSelect"
                            android:visibility="invisible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1.4"
                            app:cardCornerRadius="10dp">

                        <LinearLayout
                                android:id="@+id/linSelect"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">
                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:orientation="horizontal">

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/off_direct_current" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOffDirectCurrent"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/off_direct_voltage" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOffDirectVoltage"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            android:checked="true"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/off_ac_current" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOffAcCurrent"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/off_ac_voltage" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOffAcVoltage"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="1"
                                    android:orientation="horizontal">

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/on_direct_current" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOnDirectCurrent"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/on_direct_voltage" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOnDirectVoltage"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>

                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/on_ac_current" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOnAcCurrent"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>
                                <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                    <TextView
                                            style="@style/SelectTextView"
                                            android:text="@string/on_ac_voltage" />

                                    <com.kyleduo.switchbutton.SwitchButton
                                            android:id="@+id/sbOnAcVoltage"
                                            style="@style/SwitchButtonStyle"
                                            app:kswTextAdjust="-2dp"
                                            app:kswTextExtra="8dp"
                                            app:kswTextOff="Off"
                                            app:kswTextOn="On"
                                            app:kswTintColor="@color/theme_color" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/theme_back_color"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_drawer_backcolor"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_logo" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.3"
                        android:gravity="center|right"
                        android:text="当前版本："
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                <TextView
                        android:id="@+id/tvCurrentVersion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="V1.0.X"
                        android:textColor="@color/red"
                        android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>

        <com.example.lkmdl.view.BaseLinlayout
                android:id="@+id/linSetting"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:drawer_title="@string/parameter_setting" />
        <View
                style="@style/HLine"
                android:layout_height="0.5dp" />

        <com.example.lkmdl.view.BaseLinlayout
                android:id="@+id/linLocalFile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:drawer_image_left="@drawable/ic_local_file"
                app:drawer_title="@string/local_file" />
        <View
                style="@style/HLine"
                android:layout_height="0.5dp" />

        <com.example.lkmdl.view.BaseLinlayout
                android:id="@+id/linProjectFile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:drawer_image_left="@drawable/ic_project_file"
                app:drawer_title="@string/project_file" />
        <View
                style="@style/HLine"
                android:layout_height="0.5dp" />

        <com.example.lkmdl.view.BaseLinlayout
                android:id="@+id/linVersionCheck"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:drawer_image_left="@drawable/ic_vrsion_check"
                app:drawer_title="@string/version_check" />
        <View
                style="@style/HLine"
                android:layout_height="0.5dp" />

        <com.example.lkmdl.view.BaseLinlayout
                android:id="@+id/linContactComp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:drawer_image_left="@drawable/ic_contact_comp"
                app:drawer_title="@string/contact_comp" />
        <View
                style="@style/HLine"
                android:layout_height="0.5dp" />


        <com.example.lkmdl.view.BaseButton
                android:id="@+id/btnFinish"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:text="@string/exit_project"
                android:textColor="@color/white"
                android:textSize="13dp"
                app:bg_corner="5dp" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>